# screenoff-anim-ksu

./: .gitignore  CMakeLists.txt  build.ps1
.github/workflows/: build.yml
include/: zygisk.hpp
module/: module.prop  post-fs-data.sh
src/: main.cpp
